--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,15 @@
     <!--　HEADER INICIA -->
     <header>
         <div id="logo">
-            <a href="home.html">
+            <a href="index.html">
             <img  class= "logoHome" src="img/001_home/logoGnp.png"></a>
         </div>
         <div id="menu">
-            <a class="enlace" href="https://www.google.com/">Servicios</a>
-            <a class="enlace" href="https://www.google.com/">Consumibles y Accesorios</a>
-            <a class="enlace" href="https://www.google.com/">Equipos Médicos</a>
-            <a class="enlace" href="https://www.google.com/">COVID-19</a>
-            <a class="enlace" href="https://www.google.com/">Nosotros</a>
-            <a class="enlace" href="https://www.google.com/">Servicio Técnico</a>
+            <a class="enlace" href="equipos.html" target="_blank">Equipos Médicos</a>
+            <a class="enlace" href="consumibles.html" target="_blank">Consumibles y Accesorios</a>
+            <a class="enlace" href="covid.html" target="_blank">COVID-19</a>
+            <a class="enlace" href="servicios.html" target="_blank">Servicios</a>
+            <a class="enlace" href="nosotros.html" target="_blank">Nosotros</a>
         </div>
     </header>
     <!--　HEADER TERMINA -->
@@ -76,25 +75,25 @@
         <div class="subtitulo">NUESTRAS MARCAS</div>
         <div class="carousel-multiple-items">
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-               <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+               <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
             <div>
-                <div class="box"><img class="imgMarcas" src="img/001_home/logoWeaver.png"></div>
+                <div class="box"><img class="imgLogos" src="img/001_home/logoWeaver.png"></div>
             </div>
         </div>
         <!-- SLIDER MARCAS TERMINA-->
@@ -236,11 +235,13 @@
             </div>
         </div>
     </footer>
-    <!--　FOOTER INICIA -->
-
+    <!--　FOOTER TERMINA -->
+   
 
     <script src="js/script.js"></script>
     <script>new ElderCarousel('.carousel-multiple-items', { items: 4 })</script>
+    
+   
     
 </body>
 </html>
