--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -225,9 +225,9 @@
                     <br>Correo: ventas@gruponeuro.pe
                     <br>
                     <br>
-                    <a id="enlaceF" href="https://www.google.com/">Libro de Reclamaciones</a>
+                    <a class="enlaceF" href="https://www.google.com/">Libro de Reclamaciones</a>
                     <br>
-                    <a id="enlaceF" href="https://www.google.com/">Condiciones de uso y privacidad</a>
+                    <a class="enlaceF" href="https://www.google.com/">Condiciones de uso y privacidad</a>
                     <br>
                     <br>
                     Copyright 2021, Todos los derechos reservados.
